# CHIP-8

./: .clang-format  .editorconfig  .gitignore  main.c  makefile  meson.build
CHIP-8/: main.c
CHIP-8 Disassembler/: main.c
CHIP-8.xcodeproj/: project.pbxproj
CHIP-8.xcodeproj/xcshareddata/xcschemes/: CHIP-8.xcscheme
CHIP-8.xcodeproj/xcuserdata/jamesmason.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CHIP-8.xcodeproj/xcuserdata/jamesmason.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: chip8.h
src/: chip8.c  main.c
